[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/panels/Inventory.gd" type="Script" id=2]
[ext_resource path="res://resources/sprites/backgrounds/9patch_scroll1_med.png" type="Texture2D" id=3]
[ext_resource path="res://scenes/info_elements/WeaponCard.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/h1_font.tres" type="FontFile" id=5]
[ext_resource path="res://resources/sprites/backgrounds/logoletter1.png" type="Texture2D" id=6]
[ext_resource path="res://resources/sprites/buttons/+.png" type="Texture2D" id=7]



[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.427451, 0.427451, 0.427451, 0.627451 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Inventory" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -920.0
offset_bottom = -480.0
custom_minimum_size = Vector2( 1000, 600 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateInventory" type="HTTPRequest" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 1000.0
offset_bottom = 600.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 980.0
offset_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryLists" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer"]
offset_right = 500.0
offset_bottom = 560.0
custom_minimum_size = Vector2( 500, 0 )

[node name="ItemsL" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists"]
offset_right = 500.0
offset_bottom = 22.0
text = "Objetos"

[node name="Items" type="ItemList" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists"]
offset_top = 26.0
offset_right = 500.0
offset_bottom = 232.0
size_flags_vertical = 3
allow_reselect = true

[node name="Add" type="HBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists"]
offset_top = 236.0
offset_right = 500.0
offset_bottom = 290.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/Add"]
offset_right = 120.0
offset_bottom = 54.0

[node name="AddItemEdit" type="LineEdit" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/Add/VBoxContainer"]
offset_right = 120.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 120, 0 )
theme_override_styles/normal = SubResource( 1 )
placeholder_text = "Linterna"
caret_blink = true
caret_blink_interval = 0.5

[node name="AddItemButton" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/Add/VBoxContainer"]
offset_top = 26.0
offset_right = 120.0
offset_bottom = 54.0
custom_minimum_size = Vector2( 70, 0 )
size_flags_vertical = 3
text = "objeto"
icon = ExtResource( 7 )
flat = true

[node name="AddItemDescription" type="TextEdit" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/Add"]
offset_left = 124.0
offset_right = 500.0
offset_bottom = 54.0
custom_minimum_size = Vector2( 0, 50 )
size_flags_horizontal = 3
theme_override_styles/normal = SubResource( 1 )
wrap_enabled = true

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists"]
offset_top = 294.0
offset_right = 500.0
offset_bottom = 324.0
theme_override_styles/separator = SubResource( 2 )
theme_override_constants/separation = 30

[node name="AddWeapon" type="HBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists"]
offset_top = 328.0
offset_right = 500.0
offset_bottom = 356.0

[node name="WeaponsL" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/AddWeapon"]
offset_top = 3.0
offset_right = 59.0
offset_bottom = 25.0
text = "Armas"

[node name="VSeparator" type="VSeparator" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/AddWeapon"]
offset_left = 63.0
offset_right = 113.0
offset_bottom = 28.0
custom_minimum_size = Vector2( 50, 0 )
theme_override_styles/separator = SubResource( 3 )

[node name="AddWeaponChoice" type="OptionButton" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/AddWeapon"]
offset_left = 117.0
offset_right = 411.0
offset_bottom = 28.0
custom_minimum_size = Vector2( 150, 0 )
size_flags_horizontal = 3
theme_override_styles/normal = SubResource( 1 )
clip_text = true
align = 2

[node name="AddWeaponButton" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/AddWeapon"]
offset_left = 415.0
offset_right = 500.0
offset_bottom = 28.0
custom_minimum_size = Vector2( 70, 0 )
text = " arma"
icon = ExtResource( 7 )
flat = true

[node name="Weapons" type="ItemList" parent="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists"]
offset_top = 360.0
offset_right = 500.0
offset_bottom = 560.0
custom_minimum_size = Vector2( 0, 200 )
allow_reselect = true

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MarginContainer/HBoxContainer"]
offset_left = 504.0
offset_right = 960.0
offset_bottom = 560.0
size_flags_horizontal = 3

[node name="ItemCardCont" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer"]
visible = false
offset_left = 53.0
offset_top = 39.0
offset_right = 403.0
offset_bottom = 521.0

[node name="ItemCard" type="NinePatchRect" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont"]
offset_right = 350.0
offset_bottom = 450.0
custom_minimum_size = Vector2( 350, 450 )
texture = ExtResource( 3 )
patch_margin_left = 31
patch_margin_top = 35
patch_margin_right = 27
patch_margin_bottom = 34

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont/ItemCard"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont/ItemCard/CenterContainer"]
offset_left = 40.0
offset_top = 61.0
offset_right = 310.0
offset_bottom = 388.0

[node name="ItemName" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont/ItemCard/CenterContainer/VBoxContainer"]
offset_right = 270.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource( 5 )
text = "Item"
align = 1

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont/ItemCard/CenterContainer/VBoxContainer"]
offset_top = 33.0
offset_right = 270.0
offset_bottom = 53.0
theme_override_constants/separation = 20

[node name="ItemDescription" type="TextEdit" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont/ItemCard/CenterContainer/VBoxContainer"]
offset_top = 57.0
offset_right = 270.0
offset_bottom = 327.0
custom_minimum_size = Vector2( 270, 270 )
mouse_filter = 2
mouse_default_cursor_shape = 0
theme_override_styles/read_only = SubResource( 4 )
theme_override_styles/normal = SubResource( 5 )
text = "Descripcion de objeto molon"
readonly = true
wrap_enabled = true

[node name="RemoveItem" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont"]
offset_top = 454.0
offset_right = 350.0
offset_bottom = 482.0
text = "Borrar"
flat = true

[node name="WeaponCardCont" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer"]
visible = false
offset_left = 53.0
offset_top = 39.0
offset_right = 403.0
offset_bottom = 521.0

[node name="WeaponCard" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/WeaponCardCont" instance=ExtResource( 4 )]
offset_bottom = 450.0

[node name="RemoveWeapon" type="Button" parent="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/WeaponCardCont"]
offset_top = 454.0
offset_right = 350.0
offset_bottom = 482.0
text = "Borrar"
flat = true
[connection signal="popup_hide" from="." to="." method="commit_equipment"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/Items" to="." method="_on_Items_item_selected"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/Add/VBoxContainer/AddItemButton" to="." method="_on_AddItemButton_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/AddWeapon/AddWeaponButton" to="." method="_on_AddWeaponButton_pressed"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/HBoxContainer/InventoryLists/Weapons" to="." method="_on_Weapons_item_selected"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/ItemCardCont/RemoveItem" to="." method="_on_RemoveItem_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/HBoxContainer/CenterContainer/WeaponCardCont/RemoveWeapon" to="." method="_on_RemoveWeapon_pressed"]
